test/compare/testdata/scripts/undef.script
// errorcheck

var a = b // ERROR "undefined: b"